--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "npm run storybook",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress",
+    "predeploy": "npm run build-storybook",
+    "deploy": "gh-pages -d site",
     "prepublish": "npm run build",
     "storybook": "start-storybook -s ./dist -p 6005 -c .storybook",
     "storybook-for-app": "start-storybook -p 8001 -c .storybook-app",
-    "build-storybook": "build-storybook -c .storybook -o .site",
+    "build-storybook": "build-storybook -c .storybook -o site",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "author": "Beth",
@@ -44,6 +46,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gh-pages": "^2.1.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
