--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/runtime": "^7.5.4",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-info": "^5.1.9",
+    "@storybook/addon-knobs": "^5.2.4",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addon-notes": "^5.1.9",
     "@storybook/cli": "^5.1.9",
